concluded non-collapse nav bar design

--- a/index.html
+++ b/index.html
@@ -18,26 +18,26 @@
                 </div>
 
                 <div> 
-                    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+                    <nav class="navbar navbar-expand-lg bg-body-tertiary"> <!-- navbar first -->
                         <div class="container-fluid">
                             <div class="d-flex w-100 align-items-center justify-content-between">
                                 <!--brand place (logo)-->
-                                <a class="navbar-brand" href="#">kafka</a>
+                                <a class="navbar-brand" href="#"><embed src="./images/brand-logo.svg" class="brand-logo"></a>
 
-                                <!-- search button-->
-                                <form class="d-flex mx-auto" role="search"> 
-                                    <input class="form-control me-1" type="search" placeholder="Search" aria-label="Search"/>
-                                    <button class="btn" type="submit">🔍</button>
+                                <!-- search bar -->
+                                <form class="d-flex form-style" role="search"> 
+                                    <input class="form-control serh me-1" type="search" placeholder="Search" aria-label="Search"/>
+                                    <button class="btn p-0 search-btn" type="submit"><embed src="./images/search-icon.svg" class="search-icon"></button>
                                 </form>
 
                                 <!-- buttons -->
-                                <table class="table mb-0" style="width: auto;">
+                                <table class="table mb-0 primary-button-zone" style="width: auto;">
                                     <tbody>
                                         <tr>
-                                            <th>0</th>
-                                            <th>❔</th>
-                                            <th>🏪</th>
-                                            <th>🧕</th>
+                                            <th><a class="spec" href="#"><embed src=" ./images/something-button.svg" class="primary-button"></a></th>
+                                            <th><a class="spec" href="#"><embed src=" ./images/question-button.svg" class="primary-button"></a></th>
+                                            <th><a class="spec" href="#"><embed src="./images/cart-button.svg" class="primary-button"></a></th>
+                                            <th><a class="spec" href="#"><embed src="./images/account-button.svg" class="primary-button"></a></th>
                                         </tr>
                                     </tbody>
                                 </table>
@@ -65,7 +65,7 @@
                         </div>
 
                         <div class="container-fluid navdiv">
-                            <button class="navbar-toggler navbutton mx-auto" type="button" data-bs-toggle="collapse" data-bs-target="#categoriesCollapse">
+                            <button class="navbar-toggler navbutton collapsed mx-auto" type="button" data-bs-toggle="collapse" data-bs-target="#categoriesCollapse">
                                 <span><embed src="./images/nav-arrow.svg" class="nav-arrow"/></span>
                             </button>
                         </div>
