--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         <title>Cool Site</title>
         <link rel="stylesheet" href="./css/style.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link href="https://fonts.cdnfonts.com/css/porter-sans-block" rel="stylesheet">
+        <link href="https://fonts.cdnfonts.com/css/reddit-sans" rel="stylesheet">
     </head>
     <body>
         <div class="container-fluid p-0">
@@ -74,9 +76,21 @@
             </div>
             
             <main>
-                <div> <!-- banner -->
+                <section class="bg-black"> <!-- banner -->
+                    <div>
+                        <img src="./images/banner.jpg" class="banner">
+                        <h1 class="banner-text">PREPARA-TE PARA ÉPOCA</h1>
+                    </div>
+                    
+                </section>
+                <h2 class="title">WOAH ele adicionou um título</h2>
 
-                </div>
+                <section> <!-- image carousell -->
+                    <div class="carousel-container" id="carousel-container">
+
+                    </div>
+                </section>
+
             </main>
 
             <footer>
@@ -87,5 +101,6 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./js/carousel.js"></script>
     </body>
 </html>
