--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <h2 class="title">WOAH ele adicionou um título</h2>
 
                 <section> <!-- image carousell -->
-                    <div class="carousel-container" id="carousel-container">
+                    <div class="container-fluid d-flex carousel-container " id="carousel-container">
 
                     </div>
                 </section>
